# Projeto-LI2

./: README.md
Rastros/: CMakeLists.txt  Doxyfile  Intrepretador.c  Intrepretador.h  estruturasDados.c  estruturasDados.h  file.txt  inicializador.c  inicializador.h  interface.c  interface.h  jogar.c  jogar.h  main.c  tabmovs.txt
Rastros/Camada de interface/: Interpretador.c  Interpretador.h  imprimeCasa.c  imprimeCasa.h  interface.c  interface.h
Rastros/Camada_de_interface/: Interpretador.c  Interpretador.h  imprimeCasa.h  interface.c  interface.h
Rastros/Camadas de dados/: VerificaJogada.c  VerificaJogada.h  buscaPosicao.c  buscaPosicao.h  estruturasDados.h  grava.c  grava.h  inicializador.c  inicializador.h  lerEstado.c  lerEstado.h  listaMovs.c  listaMovs.h  modificaEstado.c  modificaEstado.h  tipoErros.h
Rastros/Camadas_de_dados/: RELATORIO.md  VerificaJogada.c  VerificaJogada.h  buscaPosicao.c  estruturasDados.h  lerEstado.c  lerEstado.h  tipoErros.c
Rastros/Listas ligadas/: dadosListas.h  escolheJogada.c  escolheJogada.h  modificaListas.c  modificaListas.h
Rastros/Listas_ligadas/: dadosListas.c  dadosListas.h  escolheJogada.c  escolheJogada.h  modificaListas.c  modificaListas.h
Rastros/Logica_do_programa/: jogar.c  jogar.h
Rastros/Lógica do programa/: jogar.c  jogar.h  transformaBranca.c  transformaBranca.h
Rastros/doc/: Interpretador_8c.xml  VerificaJogada_8c.xml  VerificaJogada_8h.xml  buscaPosicao_8h.xml  dadosListas_8c.xml  dir_27eb203ddcadeb42d898ae7f24cde09c.xml  dir_594dc54ddaea6b7304806be14d23a0a5.xml  dir_be18bbc8a9367d681e1972dc4b96bd65.xml  dir_e1ecdbac78f5041bd527fb40a7fd21eb.xml  dir_f89abcb304c928c7d889aa5625570de5.xml  escolheJogada_8c.xml  escolheJogada_8h.xml  estruturasDados_8c.xml  estruturasDados_8h.xml  grava_8c.xml  index.xml  lerEstado_8c.xml  listaMovs_8c.xml  listaMovs_8h.xml  main_8c.xml  modificaListas_8c.xml  modificaListas_8h.xml  structCOORDENADA.xml  tipoErros_8h.xml
Rastros/html/: Interpretador_8h_source.html  VerificaJogada_8h.html  VerificaJogada_8h__incl.dot  VerificaJogada_8h__incl.md5  VerificaJogada_8h_source.html  annotated.html  buscaPosicao_8h.html  buscaPosicao_8h__incl.dot  buscaPosicao_8h__incl.md5  buscaPosicao_8h_source.html  classes.html  dadosListas_8h.html  dadosListas_8h__dep__incl.dot  dadosListas_8h__dep__incl.md5  dadosListas_8h__incl.dot  dadosListas_8h__incl.md5  dadosListas_8h_source.html  dir_000000_000001.html  dir_000000_000006.html  dir_000000_000008.html  dir_000000_000009.html  dir_000001_000000.html  dir_000001_000006.html  dir_000001_000008.html  dir_000001_000009.html  dir_000006_000001.html  dir_000008_000001.html  dir_000008_000009.html  dir_000009_000000.html  dir_000009_000001.html  dir_128eb77c8cbc6b02dcdc625ba489b3f6.html  dir_128eb77c8cbc6b02dcdc625ba489b3f6_dep.dot  dir_128eb77c8cbc6b02dcdc625ba489b3f6_dep.md5  dir_27eb203ddcadeb42d898ae7f24cde09c.html  (+90 more)
bot/: CMakeLists.txt  VerificaJogada.c  a.out  buscaPosicao.c  dadosListas.h  escolheJogada.c  escolheJogada.h  grava.c  grava.h  imprimeCasa.c  imprimeCasa.h  interface.c  interface.h  jogar.c  jogar.h  listaMovs.c  listaMovs.h  main.c  modificaEstado.c  modificaEstado.h  modificaListas.c  modificaListas.h
doc/: grava_8c.xml  (+38 more)
(+132 files in other folders)
